# AgentQuant

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTQUANT.md
experiments/: results_store.py
notebooks/: agentquant_colab_spy.ipynb
peek/: __init__.py  audit.py  cli.py  datasets.py  report.py
peek/checks/: __init__.py  base.py  causality.py  shuffle.py  split.py  target_leak.py
src/: cli.py  exceptions.py
src/agent/: __init__.py  agent_graph.py  base_planner.py  context_builder.py  memory_layer.py  parameter_grid.py  proposal_generator.py  reporting.py  runner.py  strategy_memory.py  tools.py  trace.py
src/agent/swarm/: __init__.py  coordinator.py  critic_agent.py  memory_agent.py  orchestrator.py  regime_analyst.py  specialist_agents.py  state.py
src/app/: streamlit_app.py
src/backtest/: metrics.py  runner.py
src/data/: ingest.py
src/features/: engine.py  lookback_guard.py  regime.py
src/research/: __init__.py  alpha_store.py  nla_memory.py  workspace.py
src/strategies/: base.py  momentum.py  multi_strategy.py  strategy_registry.py
src/utils/: config.py  logging.py
tests/: test_alpha_store.py  test_backtest.py  test_config.py  test_data_ingest.py  test_features.py  test_memory_layer.py  test_metrics.py  test_nla_memory.py  test_peek_causality.py  test_peek_report.py  test_peek_shuffle.py  test_peek_split.py  test_peek_target_leak.py  test_proposal_generator.py  test_regime.py  test_reporting_cli.py  test_research_workspace.py  test_strategies.py  test_swarm.py
