[project]
name = "agentquant"
version = "0.2.0"
description = "Peek: catches look-ahead bias and data leakage in time-series ML pipelines. Also ships AgentQuant, the LLM research agent that motivated it."
authors = [{ name = "Avaya Aggarwal", email = "aggarwal.avaya27@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.26,<2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0,<3.0",
    "yfinance>=0.2.28",
    "scipy>=1.12",
    "streamlit>=1.39",
    "plotly>=5.17",
    "matplotlib>=3.8",
    "pyarrow>=16.0",
    "tabulate>=0.9",
    "rich>=13.7",
    "statsmodels>=0.14",
    "requests>=2.31",
]

[project.optional-dependencies]
llm = [
    "google-generativeai>=0.8",
    "langchain>=0.2",
    "langchain-google-genai>=1.0",
    "langchain-core>=0.1",
    "langgraph>=0.0.69",
    "openai>=1.0",
]
data = [
    "fredapi>=0.5",
    "alpaca-trade-api>=3.0",
]
backtest = [
    "vectorbt>=0.26",
    "empyrical>=0.5",
]
regime = [
    "hmmlearn>=0.3",
    "scikit-learn>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
run-agent = "src.agent.runner:main"
agentquant = "src.cli:main"
peek = "peek.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "peek*"]
